@@ -41,6 +41,8 @@
     Davis.
   * Improved handling of multiline call-seq.  Bug #207 by Erik Hollensbe.
   * Fixed text that is missing whitespace for TomDoc.  Bug #248 by Noel Cower.
+  * The RDoc methods now store the method they are aliased to.  Bug #206 by
+    Jeremy Stephens.
 
 === 4.0.1 / 2013-03-27
 
